# SubMission

./: .gitignore  ARCHITECTURE.md  PROPOSAL.md  README.md  README_en.md  pyproject.toml
.claude/: settings.local.json
archive/docs/: intel_arc_openvino_issue.md
archive/scripts/: check_overlap.py  debug_anchor.py  test_preprocessor.py
config/: default.yaml
src/smart_subtitle/: __main__.py
src/smart_subtitle/alignment/: text_matcher.py
src/smart_subtitle/cache/: manager.py
src/smart_subtitle/cli/: main.py
src/smart_subtitle/core/: config.py  exceptions.py  models.py  pipeline.py
src/smart_subtitle/stages/: anchor_mapper.py  audio_extraction.py  base.py  fine_alignment.py  gap_filling.py  merge.py  reference_translation.py  transcription.py
src/smart_subtitle/subtitle/: io.py  normalizer.py  preprocessor.py
src/smart_subtitle/translation/: batch.py  client.py  glossary.py  prompts.py
src/smart_subtitle/ui/: app.py  index.html  package-lock.json  package.json
src/smart_subtitle/utils/: logger.py
tests/: test_short_clip.py
tests/video1/: calc_error.py  ground_truth_first2mins.srt  output.srt  output_8min_bilingual.srt  output_8min_single.srt  output_8min_small.srt  output_cross_mapped.srt  output_fixed.srt  output_full.srt  output_full_fixed.srt  output_snippet.srt  output_snippet_semantic.srt  output_trad_priority.srt  output_true_single.srt  simplified_minor_time.srt  trditional_big_time.srt
tests/video1/preprocessed/: simplified_minor_time_chinese.srt  simplified_minor_time_clean.srt  simplified_minor_time_japanese.srt
(+6 files in other folders)
